--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ rat-cursor = "1.2.0"
 rat-event = "1.1.0"
 rat-focus = "0.31.0"
 ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
+rayon = "1.8"
+num_cpus = "1.16"
 regex = "1.11.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
